--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,176 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    /* box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
+    background: transparent !important;
+    border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 6px var(--color-stroke);
+    background: var(--color-accent);
+    border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: var(--color-accent-dim);
+}
+
+code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+
+/* #root {
+width: 100%;
+padding: 0px;
+justify-content: center;
+display: flex;
+flex-direction: column;
+position: relative;
+} */
+
+
+/* .App {
+width: 100%;
+padding: 0px;
+justify-content: center;
+display: flex;
+flex-direction: column;
+position: relative;
+} */
+
+
+/* @media (max-width: 900px) {
+.App {
+    padding: 0px 10rem 0px 10rem;
+    width: 80rem;
+}
+} */
+
+.border-shadow {
+    box-shadow: 0 0 3px -1px var(--color-shadow);
+    /* box-shadow: h-offset v-offset blur spread color; */
+}
+
+.selector-none {
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
+
+.blue-back-grad {
+    background: #1A2980;
+    background: -webkit-linear-gradient(to bottom, #26D0CE, #1A2980);
+    background: linear-gradient(to bottom, #26D0CE, #1A2980);
+}
+
+.red-grad {
+    /* background: -webkit-linear-gradient(to bottom, #F45C43, #EB3349); */
+    /* background: linear-gradient(to bottom, #F45C43, #EB3349); */
+    /* background: #e52d27; */
+    /* background: -webkit-linear-gradient(to bottom, #b31217, #e52d27); */
+    /* background: linear-gradient(to bottom, #b31217, #e52d27); */
+    /* background: rgb(2, 0, 36); */
+    /* background: linear-gradient(0deg, rgba(2, 0, 36, 1) 0%, rgba(112, 21, 86, 1) 0%, rgba(255, 0, 0, 1) 62%); */
+    background: #FF0401;
+    background: -webkit-linear-gradient(top, #FF0401, #6A0101);
+    background: -moz-linear-gradient(top, #FF0401, #6A0101);
+    background: linear-gradient(to bottom, #FF0401, #6A0101);
+}
+
+.blue-grad {
+    /* background: #1A2980; */
+    /* background: -webkit-linear-gradient(to bottom, #26D0CE, #1A2980); */
+    /* background: linear-gradient(to bottom, #26D0CE, #1A2980); */
+    background: #4b6cb7;
+    background: -webkit-linear-gradient(to bottom, #4b6cb7, #182848);
+    background: linear-gradient(to bottom, #4b6cb7, #182848);
+}
+
+.purple-grad {
+    background: #DA22FF;
+    background: -webkit-linear-gradient(to bottom, #DA22FF, #9733EE);
+    background: linear-gradient(to bottom, #DA22FF, #9733EE);
+}
+
+.temp-grad {
+    background: #02AAB0;
+    background: -webkit-linear-gradient(to bottom, #00CDAC, #02AAB0);
+    background: linear-gradient(to bottom, #00CDAC, #02AAB0);
+}
+
+.back-grad {
+    background: #1A2980;
+    background: -webkit-linear-gradient(to bottom, #26D0CE, #1A2980);
+    background: linear-gradient(to bottom, #26D0CE, #1A2980);
+}
+
+.paleblue-grad {
+    background: #2193b0;
+    background: -webkit-linear-gradient(to bottom, #6dd5ed, #2193b0);
+    background: linear-gradient(to bottom, #6dd5ed, #2193b0);
+}
+
+.side-grad {
+    /* background: #2193b0; */
+    /* background: -webkit-linear-gradient(to bottom, #6dd5ed, #2193b0); */
+    /* background: linear-gradient(to bottom, #6dd5ed, #2193b0); */
+    background-color: var(--color-primary);
+}
+
+.loading-shimmer {
+    background-color: var(--color-loader);
+    background-image: -webkit-gradient(linear, left top, right top, from(var(--color-loader)), color-stop(var(--color-loader-dim)), to(var(--color-loader)));
+    background-image: linear-gradient(90deg, var(--color-loader), var(--color-loader-dim), var(--color-loader));
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    /* border-radius: 4px; */
+    /* display: inline-block; */
+    line-height: 1;
+    /* width: 100% */
+    -webkit-animation: shimmerLoader 1.8s ease-in-out infinite;
+    animation: shimmerLoader 1.8s ease-in-out infinite
+}
+
+@-webkit-keyframes shimmerLoader {
+    0% {
+        background-position: -500px 0
+    }
+    to {
+        background-position: calc(500px + 100%) 0
+    }
+}
+
+@keyframes shimmerLoader {
+    0% {
+        background-position: -500px 0
+    }
+    to {
+        background-position: calc(500px + 100%) 0
+    }
+}
+
+* {
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+    -webkit-user-drag: none;
 }
